syntax = "proto3";

// NOTE: This file will not be parsed and is only intended to document these types in a readable way.

// header types

message void_request {
  // ID unique to each remote procedure call.
  // 
  // Set by client for associating requests and responses.
  uint32 request_id = 1;

  // ID of remote procedure to be called.
  // 
  // For normal requests this is the blake2s hash of the rest like "<module-nane>/<request-name>".
  uint32 endpoint = 2; 
}

message void_response {
  // ID of remote procedure call.
  //
  // This will be the ID given to the call by the client.
  uint32 request_id = 1;

  // Result of the request with `request_id`.
  //
  // On successful completion this should be 0. 
  uint32 status = 2;
}

message EmtpyEvent {
  uint32 event_id = 1;
}

// scalar requests

message int_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  int32 payload = 3;
}

message uint_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  uint32 payload = 3;
}

message float_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  float payload = 3;
}

message ufloat_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  float payload = 3;
}

message trigger_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  bool payload = 3;
}

message str_par_request {
  uint32 request_id = 1;
  uint32 endpoint = 2; 
  string payload = 3;
}

// scalar responses

message int_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  int32 payload = 3;
}

message uint_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  uint32 payload = 3;
}

message float_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  float payload = 3;
}

message ufloat_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  float payload = 3;
}

message trigger_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  bool payload = 3;
}

message str_par_response {
  uint32 request_id = 1;
  uint32 status = 2;
  string payload = 3;
}

// payloads

message DeviceInfo {
  int32 api_version = 1;
  int32 api_hash = 2;
}
